--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description: >-                        # used by seo meta and the atom feed
   개발자 anojds 블로그입니다
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://anojds.github.io'
+url: 'https://blog.anojds.com'
 
 github:
   username: anojds             # change to your github username
