--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ github:
   username: anojds             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: anojds            # change to your twitter username
 
 social:
   # Change to your full name.
