--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,15 @@ timezone: Asia/Seoul
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 
-title: anojds                          # the main title
+title: FIRO                          # the main title
 
-tagline: 개발자 anojds 블로그입니다   # it will display as the sub-title
+tagline: Stylish Highschool Fullstack Developer   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  개발자 anojds 블로그입니다
+ Stylish Highschool Fullstack Developer
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://blog.anojds.com'
+url: 'https://blog.firos.dev'
 
 github:
   username: anojds             # change to your github username
@@ -38,12 +38,12 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: anojds
-  email: mail@anojds.com             # change to your email address
+  name: FIRO
+  email: mail@firos.dev           # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/anojds      # change to your twitter homepage
-    - https://github.com/anojds       # change to your github homepage
+    - https://twitter.com/iamfiro_      # change to your twitter homepage
+    - https://github.com/iamfiro       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
