--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ theme_mode:   # [light|dark]
 
 img_cdn: 'https://raw.githubusercontent.com/cotes2020/chirpy-images/main'
 
-avatar: 'https://pbs.twimg.com/profile_images/1451012283795009545/xM2RR9VZ_400x400.jpg'
+avatar: 'https://avatars.githubusercontent.com/u/72495729?v=4'
 
 toc: true
 
